# resumed_nllb

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Makefile  README.md  compose-build.yml  compose-dev.yml  compose.yml  main.py  pyproject.toml
.github/workflows/: app.yml  base-changed.yml  base-current.yml  base.yml  docker-build.yml
resumed_nllb/: __init__.py  config.py  logger.py  model.py  routes.py
