[tool.poetry]
name = "resumed-nllb"
version = "0.1.0"
description = "Flask translations test test 2 API using HuggingFace models"
authors = ["Tomasz Szpak"]
license = "MIT"
readme = "README.md"
packages = [{ include = "resumed_nllb" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
torch = "^2.8.0"
flask = "^3.1.1"
transformers = "^4.55.0"
gunicorn = "^23.0.0"

[tool.poetry.scripts]
resumed = "main:create_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
